// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHeader should render 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 bg-theme-neutral-900"
    >
      <div
        class="container flex items-center justify-between mx-auto px-14"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="flex"
          >
            <div
              class="sc-AxgMl iqKzwo border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fXAZVs"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <h2
            class="mb-0 text-white"
            data-testid="WalletHeader__name"
          />
        </div>
        <div
          class="flex items-stretch space-x-2"
        >
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm goVygI text-theme-neutral-dark hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span>
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star-outline.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm kbZyZT"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm gBWztV text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-fzoXzr imWwrn"
    >
      <div
        class="container py-16 mx-auto px-14"
      >
        <ul
          class="flex items-stretch space-x-8 divide-x-1 divide-theme-neutral-300"
        >
          <li
            class="flex flex-col space-y-2"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="font-semibold text-sm text-theme-neutral-dark"
              >
                Address
              </span>
              <label
                class="flex"
              >
                <input
                  class="Toggle__Input-qyyifx-0 bXkHfF"
                  data-testid="WalletHeader__toggle"
                  type="checkbox"
                />
                <div
                  class="Toggle__Handle-qyyifx-1 jXkMFJ"
                >
                  <span
                    class="Toggle__HandleInner-qyyifx-2 chnbkf"
                    disabled=""
                  />
                </div>
              </label>
              <span
                class="font-semibold text-sm text-theme-neutral-light"
              >
                Public Key
              </span>
            </div>
            <div>
              <span
                class="inline-block text-lg font-medium"
                data-testid="WalletHeader__address-publickey"
              >
                abc
              </span>
              <span
                class="ml-4"
                data-testid="WalletHeader__copy-button"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxirZ iQaTP text-theme-primary-300"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </li>
          <li
            class="flex flex-col pl-8 space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-neutral-dark"
            >
              Balance
            </span>
            <span
              class="text-lg font-semibold"
              data-testid="WalletHeader__balance"
            >
              0 ARK
            </span>
          </li>
        </ul>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show modifiers 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 bg-theme-neutral-900"
    >
      <div
        class="container flex items-center justify-between mx-auto px-14"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="flex"
          >
            <div
              class="sc-AxgMl iqKzwo border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fXAZVs"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <h2
            class="mb-0 text-white"
            data-testid="WalletHeader__name"
          />
          <span
            data-testid="WalletHeader__ledger"
          >
            <div
              class="sc-AxirZ iQaTP text-theme-neutral-dark"
              height="1em"
              width="1em"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </span>
          <span
            data-testid="WalletHeader__multisig"
          >
            <div
              class="sc-AxirZ iQaTP text-theme-neutral-dark"
              height="1em"
              width="1em"
            >
              <svg>
                multisig.svg
              </svg>
            </div>
          </span>
        </div>
        <div
          class="flex items-stretch space-x-2"
        >
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm goVygI text-theme-neutral-dark hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span>
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm kbZyZT"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm gBWztV text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-fzoXzr imWwrn"
    >
      <div
        class="container py-16 mx-auto px-14"
      >
        <ul
          class="flex items-stretch space-x-8 divide-x-1 divide-theme-neutral-300"
        >
          <li
            class="flex flex-col space-y-2"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="font-semibold text-sm text-theme-neutral-dark"
              >
                Address
              </span>
              <label
                class="flex"
              >
                <input
                  class="Toggle__Input-qyyifx-0 bXkHfF"
                  data-testid="WalletHeader__toggle"
                  type="checkbox"
                />
                <div
                  class="Toggle__Handle-qyyifx-1 jXkMFJ"
                >
                  <span
                    class="Toggle__HandleInner-qyyifx-2 chnbkf"
                    disabled=""
                  />
                </div>
              </label>
              <span
                class="font-semibold text-sm text-theme-neutral-light"
              >
                Public Key
              </span>
            </div>
            <div>
              <span
                class="inline-block text-lg font-medium"
                data-testid="WalletHeader__address-publickey"
              >
                abc
              </span>
              <span
                class="ml-4"
                data-testid="WalletHeader__copy-button"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxirZ iQaTP text-theme-primary-300"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </li>
          <li
            class="flex flex-col pl-8 space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-neutral-dark"
            >
              Balance
            </span>
            <span
              class="text-lg font-semibold"
              data-testid="WalletHeader__balance"
            >
              0 ARK
            </span>
          </li>
        </ul>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show publicKey 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 bg-theme-neutral-900"
    >
      <div
        class="container flex items-center justify-between mx-auto px-14"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="flex"
          >
            <div
              class="sc-AxgMl iqKzwo border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fXAZVs"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <h2
            class="mb-0 text-white"
            data-testid="WalletHeader__name"
          />
        </div>
        <div
          class="flex items-stretch space-x-2"
        >
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm goVygI text-theme-neutral-dark hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span>
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star-outline.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm kbZyZT"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm gBWztV text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-fzoXzr imWwrn"
    >
      <div
        class="container py-16 mx-auto px-14"
      >
        <ul
          class="flex items-stretch space-x-8 divide-x-1 divide-theme-neutral-300"
        >
          <li
            class="flex flex-col space-y-2"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <span
                class="font-semibold text-sm text-theme-neutral-light"
              >
                Address
              </span>
              <label
                class="flex"
              >
                <input
                  class="Toggle__Input-qyyifx-0 bXkHfF"
                  data-testid="WalletHeader__toggle"
                  type="checkbox"
                />
                <div
                  class="Toggle__Handle-qyyifx-1 jXkMFJ"
                >
                  <span
                    class="Toggle__HandleInner-qyyifx-2 fnvabd"
                  />
                </div>
              </label>
              <span
                class="font-semibold text-sm text-theme-neutral-dark"
              >
                Public Key
              </span>
            </div>
            <div>
              <span
                class="inline-block text-lg font-medium"
                data-testid="WalletHeader__address-publickey"
              >
                123
              </span>
              <span
                class="ml-4"
                data-testid="WalletHeader__copy-button"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxirZ iQaTP text-theme-primary-300"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
